force-app/main/default/objects/Unit__c/fields/Active_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Active_Inactive__c</fullName>
    <label>Active/Inactive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>