force-app/main/default/objects/Unit__c/fields/AdvanceMC1Y__c.field-meta.xml
<CustomField>
    <fullName>AdvanceMC1Y__c</fullName>
    <label>AdvanceMC1Y</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>