force-app/main/default/objects/Unit__c/fields/Allocated_SM__c.field-meta.xml
<CustomField>
    <fullName>Allocated_SM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Allocated SM</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Sales</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Id</field>
            <operation>equals</operation>
            <value>00e1t000001CBXG</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Units</relationshipName>
    <type>Lookup</type>
</CustomField>