force-app/main/default/objects/Unit__c/fields/Approx_AV__c.field-meta.xml
<CustomField>
    <fullName>Approx_AV__c</fullName>
    <label>Approx AV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>