force-app/main/default/objects/Unit__c/fields/Blocked_Unit_without_Token__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Unit_without_Token__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blocked Unit without Token</label>
    <type>Checkbox</type>
</CustomField>