force-app/main/default/objects/Unit__c/fields/BookingName__c.field-meta.xml
<CustomField>
    <fullName>BookingName__c</fullName>
    <formula>Booking__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BookingName</label>
    <type>Text</type>
</CustomField>