force-app/main/default/objects/Unit__c/fields/Building_Number_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Building_Number_Arabic__c</fullName>
    <formula>Tower__r.Building_Number_Arabic__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Number Arabic</label>
    <type>Text</type>
</CustomField>