force-app/main/default/objects/Unit__c/fields/Car_Park_Count_1__c.field-meta.xml
<CustomField>
    <fullName>Car_Park_Count_1__c</fullName>
    <label>Car Park Count 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>