force-app/main/default/objects/Unit__c/fields/Car_Park_Type_1__c.field-meta.xml
<CustomField>
    <fullName>Car_Park_Type_1__c</fullName>
    <label>Car Park Type 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stack</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Tandem</fullName>
            </value>
            <value>
                <fullName>2 Wheeler</fullName>
            </value>
            <value>
                <fullName>Covered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>