force-app/main/default/objects/Unit__c/fields/Carpet_Area__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Area__c</fullName>
    <label>RERA Carpet Area(Sq.Ft)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>