force-app/main/default/objects/Unit__c/fields/Carpet_Area_in_Sq_Mts__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Area_in_Sq_Mts__c</fullName>
    <label>Carpet Area in Sq.Mtrs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>