force-app/main/default/objects/Unit__c/fields/Charge_10_Amount__c.field-meta.xml
<CustomField>
    <fullName>Charge_10_Amount__c</fullName>
    <label>Charge 10 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>