force-app/main/default/objects/Unit__c/fields/Charge_10_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Charge_10_Bucket__c</fullName>
    <label>Charge 10 Bucket</label>
    <length>27</length>
    <type>Text</type>
</CustomField>