force-app/main/default/objects/Unit__c/fields/Charge_10_Name__c.field-meta.xml
<CustomField>
    <fullName>Charge_10_Name__c</fullName>
    <label>Charge 10 Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_Charges</valueSetName>
    </valueSet>
</CustomField>