force-app/main/default/objects/Unit__c/fields/Charge_12_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Charge_12_Bucket__c</fullName>
    <label>Charge 12 Bucket</label>
    <length>20</length>
    <type>Text</type>
</CustomField>