force-app/main/default/objects/Unit__c/fields/Chargeable_Area__c.field-meta.xml
<CustomField>
    <fullName>Chargeable_Area__c</fullName>
    <label>Chargeable Area</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>