force-app/main/default/objects/Unit__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <label>Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ST</fullName>
                <label>Studio</label>
            </value>
            <value>
                <fullName>2DP</fullName>
                <label>2 BR Duplex</label>
            </value>
            <value>
                <fullName>3DP</fullName>
                <label>3 BR Duplex</label>
            </value>
            <value>
                <fullName>4DP</fullName>
                <label>4 BR Duplex</label>
            </value>
            <value>
                <fullName>1 BR</fullName>
            </value>
            <value>
                <fullName>2 BR</fullName>
            </value>
            <value>
                <fullName>3 BR</fullName>
            </value>
            <value>
                <fullName>4BR Villa</fullName>
            </value>
            <value>
                <fullName>5BR Villa</fullName>
                <label>5 BR</label>
            </value>
            <value>
                <fullName>GFA Plots</fullName>
            </value>
            <value>
                <fullName>Gardenia</fullName>
            </value>
            <value>
                <fullName>Townhouse</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Canal Villa</fullName>
            </value>
            <value>
                <fullName>4 BR</fullName>
            </value>
            <value>
                <fullName>1 Br + Study</fullName>
                <label>1 BR + Study</label>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Retail / Cafe</fullName>
            </value>
            <value>
                <fullName>2.5 BR</fullName>
            </value>
            <value>
                <fullName>6 BR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>