force-app/main/default/objects/Unit__c/fields/Cupboard_Area_in_Sq_Mtrs__c.field-meta.xml
<CustomField>
    <fullName>Cupboard_Area_in_Sq_Mtrs__c</fullName>
    <label>Cupboard Area in Sq.Mtrs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>