force-app/main/default/objects/Unit__c/fields/Customers__c.field-meta.xml
<CustomField>
    <fullName>Customers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customers</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Units</relationshipLabel>
    <relationshipName>Units</relationshipName>
    <type>Lookup</type>
</CustomField>