force-app/main/default/objects/Unit__c/fields/Description_for_Blocking_Holding__c.field-meta.xml
<CustomField>
    <fullName>Description_for_Blocking_Holding__c</fullName>
    <label>Description for Blocking/ Holding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>