force-app/main/default/objects/Unit__c/fields/DLD_Building_Number__c.field-meta.xml
<CustomField>
    <fullName>DLD_Building_Number__c</fullName>
    <formula>Tower__r.Building_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DLD Building Number</label>
    <type>Text</type>
</CustomField>