force-app/main/default/objects/Unit__c/fields/DLD_Building_Number_English__c.field-meta.xml
<CustomField>
    <fullName>DLD_Building_Number_English__c</fullName>
    <label>DLD Building Number English</label>
    <length>20</length>
    <type>Text</type>
</CustomField>