force-app/main/default/objects/Unit__c/fields/DLD_Unit_No__c.field-meta.xml
<CustomField>
    <fullName>DLD_Unit_No__c</fullName>
    <label>DLD Unit No</label>
    <length>18</length>
    <type>Text</type>
</CustomField>