force-app/main/default/objects/Unit__c/fields/DM_PS_PROPSTRENGTH_FLOOR__c.field-meta.xml
<CustomField>
    <fullName>DM_PS_PROPSTRENGTH_FLOOR__c</fullName>
    <formula>Tower__r.Name&amp;&quot; &quot;&amp; Floor_No_to_print__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DM_PS_PROPSTRENGTH__FLOOR</label>
    <type>Text</type>
</CustomField>