force-app/main/default/objects/Unit__c/fields/DM_Rate_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>DM_Rate_Per_Unit__c</fullName>
    <formula>Puchase_Price__c  /  Chargeable_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>