force-app/main/default/objects/Unit__c/fields/Docgen_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Docgen_Project_Name__c</fullName>
    <label>Docgen Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>