force-app/main/default/objects/Unit__c/fields/Docgen_Project_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Docgen_Project_Name_Arabic__c</fullName>
    <label>Docgen Project Name Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>