force-app/main/default/objects/Unit__c/fields/Enclosed_Balcony_in_Sq_Mtrs__c.field-meta.xml
<CustomField>
    <fullName>Enclosed_Balcony_in_Sq_Mtrs__c</fullName>
    <label>Enclosed Balcony in Sq.Mtrs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>