force-app/main/default/objects/Unit__c/fields/File_Note_Comments__c.field-meta.xml
<CustomField>
    <fullName>File_Note_Comments__c</fullName>
    <label>File Note Comments</label>
    <type>TextArea</type>
</CustomField>