force-app/main/default/objects/Unit__c/fields/Floor_No_to_print__c.field-meta.xml
<CustomField>
    <fullName>Floor_No_to_print__c</fullName>
    <label>Floor No. to print</label>
    <length>10</length>
    <type>Text</type>
</CustomField>