force-app/main/default/objects/Unit__c/fields/Floor_No_to_print_In_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Floor_No_to_print_In_Arabic__c</fullName>
    <label>Floor No. to print In Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>