force-app/main/default/objects/Unit__c/fields/Floor_Rise__c.field-meta.xml
<CustomField>
    <fullName>Floor_Rise__c</fullName>
    <label>Floor Rise</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>