force-app/main/default/objects/Unit__c/fields/For_Direct_Sale__c.field-meta.xml
<CustomField>
    <fullName>For_Direct_Sale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For Direct Sale</label>
    <type>Checkbox</type>
</CustomField>