force-app/main/default/objects/Unit__c/fields/Garden_Area_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Garden_Area_Sq_Ft__c</fullName>
    <label>Garden Area(Sq.Ft)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>