force-app/main/default/objects/Unit__c/fields/Garden_Area_Sq_Mtr__c.field-meta.xml
<CustomField>
    <fullName>Garden_Area_Sq_Mtr__c</fullName>
    <formula>Garden_Area_Sq_Ft__c / 10.765</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Garden Area(Sq.Mtr)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>