force-app/main/default/objects/Unit__c/fields/Investor_Unit__c.field-meta.xml
<CustomField>
    <fullName>Investor_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investor Unit</label>
    <type>Checkbox</type>
</CustomField>