force-app/main/default/objects/Unit__c/fields/Is_System_UnReserved__c.field-meta.xml
<CustomField>
    <fullName>Is_System_UnReserved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is System UnReserved</label>
    <type>Checkbox</type>
</CustomField>