force-app/main/default/objects/Unit__c/fields/Main_Door_Keys__c.field-meta.xml
<CustomField>
    <fullName>Main_Door_Keys__c</fullName>
    <label>Main Door Keys</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 sets</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3 sets</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>