force-app/main/default/objects/Unit__c/fields/Management_Approved_Booking__c.field-meta.xml
<CustomField>
    <fullName>Management_Approved_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Management Approved Booking</label>
    <type>Checkbox</type>
</CustomField>