force-app/main/default/objects/Unit__c/fields/Management_approved_Comment__c.field-meta.xml
<CustomField>
    <fullName>Management_approved_Comment__c</fullName>
    <label>Management approved Booking Comment</label>
    <type>TextArea</type>
</CustomField>