force-app/main/default/objects/Unit__c/fields/Material_Description__c.field-meta.xml
<CustomField>
    <fullName>Material_Description__c</fullName>
    <label>Material Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>