force-app/main/default/objects/Unit__c/fields/No_of_Bedroom__c.field-meta.xml
<CustomField>
    <fullName>No_of_Bedroom__c</fullName>
    <label>No. of Bedroom</label>
    <length>50</length>
    <type>Text</type>
</CustomField>