force-app/main/default/objects/Unit__c/fields/Not_Available_for_Sales__c.field-meta.xml
<CustomField>
    <fullName>Not_Available_for_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Available for Sales</label>
    <type>Checkbox</type>
</CustomField>