force-app/main/default/objects/Unit__c/fields/Parking_Bay_Allocation_No__c.field-meta.xml
<CustomField>
    <fullName>Parking_Bay_Allocation_No__c</fullName>
    <label>Parking Bay Allocation No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>