force-app/main/default/objects/Unit__c/fields/Permitted_Use__c.field-meta.xml
<CustomField>
    <fullName>Permitted_Use__c</fullName>
    <label>Permitted Use</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>