force-app/main/default/objects/Unit__c/fields/Permitted_Use_For_Docgen__c.field-meta.xml
<CustomField>
    <fullName>Permitted_Use_For_Docgen__c</fullName>
    <label>Permitted Use For Docgen</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial Purposes only</fullName>
            </value>
            <value>
                <fullName>Restaurant Purposes only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>