force-app/main/default/objects/Unit__c/fields/Plot_Area__c.field-meta.xml
<CustomField>
    <fullName>Plot_Area__c</fullName>
    <label>Plot Area (For Villas)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>