force-app/main/default/objects/Unit__c/fields/Project_Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Unit_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Unit Type</label>
    <referenceTo>Project_Unit_Type__c</referenceTo>
    <relationshipLabel>Units</relationshipLabel>
    <relationshipName>Units</relationshipName>
    <type>Lookup</type>
</CustomField>