force-app/main/default/objects/Unit__c/fields/Puchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Puchase_Price__c</fullName>
    <label>Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>