force-app/main/default/objects/Unit__c/fields/Purchase_Price_Words_In_English__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price_Words_In_English__c</fullName>
    <label>Purchase Price Words In English</label>
    <length>255</length>
    <type>Text</type>
</CustomField>