force-app/main/default/objects/Unit__c/fields/Reason_For_CRM_returns_to_sales__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_CRM_returns_to_sales__c</fullName>
    <label>Reason For CRM returns to sales</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Physical Document Rejected</fullName>
            </value>
            <value>
                <fullName>Welcome Call Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>