force-app/main/default/objects/Unit__c/fields/RERA_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>RERA_Approval_Date__c</fullName>
    <description>This field refers rera approval date of the unit</description>
    <label>RERA Approval Date</label>
    <type>Date</type>
</CustomField>