force-app/main/default/objects/Unit__c/fields/RERA_Chargeable_Area_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>RERA_Chargeable_Area_Sq_Ft__c</fullName>
    <label>RERA Chargeable Area (Sq. Ft.)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>