force-app/main/default/objects/Unit__c/fields/RERA_Other_Usable_Area_Sq_Mtr__c.field-meta.xml
<CustomField>
    <fullName>RERA_Other_Usable_Area_Sq_Mtr__c</fullName>
    <formula>RERA_Other_Usable_Area_Sq_Ft__c / 10.765</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RERA Other Usable Area(Sq.Mtr)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>