force-app/main/default/objects/Unit__c/fields/Residents_Manual__c.field-meta.xml
<CustomField>
    <fullName>Residents_Manual__c</fullName>
    <label>Residents Manual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provided</fullName>
            </value>
            <value>
                <fullName>Not Provided</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>