force-app/main/default/objects/Unit__c/fields/Roadshow_Booking__c.field-meta.xml
<CustomField>
    <fullName>Roadshow_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Roadshow Booking</label>
    <type>Checkbox</type>
</CustomField>