force-app/main/default/objects/Unit__c/fields/Roadshow_Comments__c.field-meta.xml
<CustomField>
    <fullName>Roadshow_Comments__c</fullName>
    <label>Roadshow Comments</label>
    <type>TextArea</type>
</CustomField>