force-app/main/default/objects/Unit__c/fields/Send_BCC__c.field-meta.xml
<CustomField>
    <fullName>Send_BCC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send BCC</label>
    <type>Checkbox</type>
</CustomField>