force-app/main/default/objects/Unit__c/fields/Service_Charges__c.field-meta.xml
<CustomField>
    <fullName>Service_Charges__c</fullName>
    <formula>IF( Tower__r.Service_Charges__c&gt;=0 ,&quot; Residential Unit AED &quot; + TEXT(Tower__r.Service_Charges__c) + &quot; per sq. ft. (excluding central chiller service charge)&quot;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Charges</label>
    <type>Text</type>
</CustomField>