force-app/main/default/objects/Unit__c/fields/SM_Allocation_DateTime__c.field-meta.xml
<CustomField>
    <fullName>SM_Allocation_DateTime__c</fullName>
    <label>SM Allocation DateTime</label>
    <type>DateTime</type>
</CustomField>