force-app/main/default/objects/Unit__c/fields/SM_Allocation_reset_hours__c.field-meta.xml
<CustomField>
    <fullName>SM_Allocation_reset_hours__c</fullName>
    <label>SM Allocation reset hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>