force-app/main/default/objects/Unit__c/fields/SPA_District_Arabic__c.field-meta.xml
<CustomField>
    <fullName>SPA_District_Arabic__c</fullName>
    <label>SPA District_Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>