force-app/main/default/objects/Unit__c/fields/Staff_accomodation_area__c.field-meta.xml
<CustomField>
    <fullName>Staff_accomodation_area__c</fullName>
    <label>Staff accomodation area (Sq.ft)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>