force-app/main/default/objects/Unit__c/fields/Stage_of_Booking__c.field-meta.xml
<CustomField>
    <fullName>Stage_of_Booking__c</fullName>
    <formula>TEXT(Booking__r.Stage_of_Booking__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage of Booking</label>
    <type>Text</type>
</CustomField>