force-app/main/default/objects/Unit__c/fields/Store_Unit__c.field-meta.xml
<CustomField>
    <fullName>Store_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store Unit</label>
    <type>Checkbox</type>
</CustomField>