force-app/main/default/objects/Unit__c/fields/Store_Unit_Calc__c.field-meta.xml
<CustomField>
    <fullName>Store_Unit_Calc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store Unit Calc</label>
    <type>Checkbox</type>
</CustomField>