force-app/main/default/objects/Unit__c/fields/Sub_Project__c.field-meta.xml
<CustomField>
    <fullName>Sub_Project__c</fullName>
    <formula>Tower__r.Cluster__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Project</label>
    <type>Text</type>
</CustomField>