force-app/main/default/objects/Unit__c/fields/Sub_project_tower__c.field-meta.xml
<CustomField>
    <fullName>Sub_project_tower__c</fullName>
    <formula>Tower__r.Cluster__r.Name + &quot;-&quot; +  Tower__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Project Tower</label>
    <type>Text</type>
</CustomField>