force-app/main/default/objects/Unit__c/fields/Tax_Rate_Basic__c.field-meta.xml
<CustomField>
    <fullName>Tax_Rate_Basic__c</fullName>
    <label>VAT Rate Basic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tax_Rates</valueSetName>
    </valueSet>
</CustomField>