force-app/main/default/objects/Unit__c/fields/Temp_Rate_per_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>Temp_Rate_per_sq_ft__c</fullName>
    <label>Temp Rate per sq.ft</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>