force-app/main/default/objects/Unit__c/fields/Time_Slot_For_Handover__c.field-meta.xml
<CustomField>
    <fullName>Time_Slot_For_Handover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Slot For Handover</label>
    <referenceTo>Time_Slot_For_Handover__c</referenceTo>
    <relationshipLabel>Units</relationshipLabel>
    <relationshipName>Units</relationshipName>
    <type>Lookup</type>
</CustomField>